// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Should match snapshot for default 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 44px;
  border-radius: 10px;
  background-color: #f1f2f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  border: 2px solid transparent;
}

.emotion-1:focus-within {
  border: 2px solid #9ee1ff;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #f1f2f8;
  max-width: calc(100% - 75px);
  font-size: 15px;
  line-height: 1.33;
  color: #2a225b;
  border-radius: 10px;
  margin: 0 14px;
  border: unset;
  caret-color: #908eff;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:disabled {
  color: #ced1e2;
}

.emotion-0::-webkit-input-placeholder {
  color: #9fa6c7;
}

.emotion-0::-moz-placeholder {
  color: #9fa6c7;
}

.emotion-0:-ms-input-placeholder {
  color: #9fa6c7;
}

.emotion-0::placeholder {
  color: #9fa6c7;
}

<div
  class="emotion-1"
>
  <input
    class="emotion-0"
  />
</div>
`;

exports[`Input Should match snapshot for default password type 1`] = `
.emotion-2 {
  margin: 0 14px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 44px;
  border-radius: 10px;
  background-color: #f1f2f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  border: 2px solid transparent;
}

.emotion-3:focus-within {
  border: 2px solid #9ee1ff;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #f1f2f8;
  max-width: calc(100% - 75px);
  font-size: 15px;
  line-height: 1.33;
  color: #2a225b;
  border-radius: 10px;
  margin: 0 14px;
  border: unset;
  caret-color: #908eff;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:disabled {
  color: #ced1e2;
}

.emotion-0::-webkit-input-placeholder {
  color: #9fa6c7;
}

.emotion-0::-moz-placeholder {
  color: #9fa6c7;
}

.emotion-0:-ms-input-placeholder {
  color: #9fa6c7;
}

.emotion-0::placeholder {
  color: #9fa6c7;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  padding: 0;
  border: none;
  width: 24px;
  height: 24px;
  color: #9fa6c7;
  cursor: pointer;
  pointer-events: all;
  background: transparent;
}

.emotion-1 > * {
  width: 20px;
  height: 20px;
}

<div
  class="emotion-3"
>
  <input
    class="emotion-0"
    type="password"
  />
  <span
    class="emotion-2"
  >
    <button
      class="emotion-1"
    >
      <svg
        fill="currentColor"
        height="24"
        viewBox="0 0 32 32"
        width="24"
      >
        <path
          d="M16.003 24.01c-7.338 0-10.983-5.836-11.89-7.539a.974.974 0 0 1 .003-.927l-.003.005c.907-1.703 4.552-7.539 11.89-7.539s10.983 5.836 11.89 7.539a.974.974 0 0 1-.002.927l.003-.005c-.907 1.703-4.552 7.539-11.89 7.539zm.007-13.5a5.5 5.5 0 1 0 5.5 5.5 5.5 5.5 0 0 0-5.5-5.5zm0 9.001a3.5 3.5 0 1 1 3.5-3.5 3.5 3.5 0 0 1-3.5 3.5z"
        />
      </svg>
    </button>
  </span>
</div>
`;

exports[`Input Should match snapshot for disabled 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 44px;
  border-radius: 10px;
  background-color: #f1f2f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  border: 2px solid transparent;
}

.emotion-1:focus-within {
  border: 2px solid #9ee1ff;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #f1f2f8;
  max-width: calc(100% - 75px);
  font-size: 15px;
  line-height: 1.33;
  color: #2a225b;
  border-radius: 10px;
  margin: 0 14px;
  border: unset;
  caret-color: #908eff;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:disabled {
  color: #ced1e2;
}

.emotion-0::-webkit-input-placeholder {
  color: #9fa6c7;
}

.emotion-0::-moz-placeholder {
  color: #9fa6c7;
}

.emotion-0:-ms-input-placeholder {
  color: #9fa6c7;
}

.emotion-0::placeholder {
  color: #9fa6c7;
}

<div
  class="emotion-1"
>
  <input
    class="emotion-0"
    disabled=""
  />
</div>
`;

exports[`Input Should match snapshot for password type with custom suffix 1`] = `
.emotion-1 {
  margin: 0 14px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 44px;
  border-radius: 10px;
  background-color: #f1f2f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  border: 2px solid transparent;
}

.emotion-2:focus-within {
  border: 2px solid #9ee1ff;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #f1f2f8;
  max-width: calc(100% - 75px);
  font-size: 15px;
  line-height: 1.33;
  color: #2a225b;
  border-radius: 10px;
  margin: 0 14px;
  border: unset;
  caret-color: #908eff;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:disabled {
  color: #ced1e2;
}

.emotion-0::-webkit-input-placeholder {
  color: #9fa6c7;
}

.emotion-0::-moz-placeholder {
  color: #9fa6c7;
}

.emotion-0:-ms-input-placeholder {
  color: #9fa6c7;
}

.emotion-0::placeholder {
  color: #9fa6c7;
}

<div
  class="emotion-2"
>
  <input
    class="emotion-0"
    type="password"
  />
  <span
    class="emotion-1"
  >
    S
  </span>
</div>
`;

exports[`Input Should match snapshot for with prefix 1`] = `
.emotion-0 {
  margin: 0 14px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 44px;
  border-radius: 10px;
  background-color: #f1f2f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  border: 2px solid transparent;
}

.emotion-2:focus-within {
  border: 2px solid #9ee1ff;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #f1f2f8;
  max-width: calc(100% - 75px);
  font-size: 15px;
  line-height: 1.33;
  color: #2a225b;
  border-radius: 10px;
  margin: 0 14px;
  border: unset;
  caret-color: #908eff;
  margin: 0;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1:disabled {
  color: #ced1e2;
}

.emotion-1::-webkit-input-placeholder {
  color: #9fa6c7;
}

.emotion-1::-moz-placeholder {
  color: #9fa6c7;
}

.emotion-1:-ms-input-placeholder {
  color: #9fa6c7;
}

.emotion-1::placeholder {
  color: #9fa6c7;
}

<div
  class="emotion-2"
>
  <span
    class="emotion-0"
  >
    P
  </span>
  <input
    class="emotion-1"
  />
</div>
`;

exports[`Input Should match snapshot for with suffix 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 44px;
  border-radius: 10px;
  background-color: #f1f2f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  border: 2px solid transparent;
}

.emotion-1:focus-within {
  border: 2px solid #9ee1ff;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #f1f2f8;
  max-width: calc(100% - 75px);
  font-size: 15px;
  line-height: 1.33;
  color: #2a225b;
  border-radius: 10px;
  margin: 0 14px;
  border: unset;
  caret-color: #908eff;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:disabled {
  color: #ced1e2;
}

.emotion-0::-webkit-input-placeholder {
  color: #9fa6c7;
}

.emotion-0::-moz-placeholder {
  color: #9fa6c7;
}

.emotion-0:-ms-input-placeholder {
  color: #9fa6c7;
}

.emotion-0::placeholder {
  color: #9fa6c7;
}

<div
  class="emotion-1"
>
  <input
    class="emotion-0"
  />
</div>
`;

exports[`Input Should match snapshot for with variants 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 44px;
  border-radius: 10px;
  background-color: #f1f2f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  border: 2px solid transparent;
}

.emotion-1:focus-within {
  border: 2px solid #9ee1ff;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #f1f2f8;
  max-width: calc(100% - 75px);
  font-size: 15px;
  line-height: 1.33;
  color: #2a225b;
  border-radius: 10px;
  margin: 0 14px;
  border: unset;
  caret-color: #908eff;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:disabled {
  color: #ced1e2;
}

.emotion-6::-webkit-input-placeholder {
  color: #9fa6c7;
}

.emotion-6::-moz-placeholder {
  color: #9fa6c7;
}

.emotion-6:-ms-input-placeholder {
  color: #9fa6c7;
}

.emotion-6::placeholder {
  color: #9fa6c7;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #f1f2f8;
  max-width: calc(100% - 75px);
  font-size: 15px;
  line-height: 1.33;
  color: #fd5573;
  border-radius: 10px;
  margin: 0 14px;
  border: unset;
  caret-color: #908eff;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:disabled {
  color: #ced1e2;
}

.emotion-0::-webkit-input-placeholder {
  color: #9fa6c7;
}

.emotion-0::-moz-placeholder {
  color: #9fa6c7;
}

.emotion-0:-ms-input-placeholder {
  color: #9fa6c7;
}

.emotion-0::placeholder {
  color: #9fa6c7;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #f1f2f8;
  max-width: calc(100% - 75px);
  font-size: 15px;
  line-height: 1.33;
  color: #24bdb9;
  border-radius: 10px;
  margin: 0 14px;
  border: unset;
  caret-color: #908eff;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2:disabled {
  color: #ced1e2;
}

.emotion-2::-webkit-input-placeholder {
  color: #9fa6c7;
}

.emotion-2::-moz-placeholder {
  color: #9fa6c7;
}

.emotion-2:-ms-input-placeholder {
  color: #9fa6c7;
}

.emotion-2::placeholder {
  color: #9fa6c7;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #f1f2f8;
  max-width: calc(100% - 75px);
  font-size: 15px;
  line-height: 1.33;
  color: #5856d6;
  border-radius: 10px;
  margin: 0 14px;
  border: unset;
  caret-color: #908eff;
}

.emotion-4:focus {
  outline: none;
}

.emotion-4:disabled {
  color: #ced1e2;
}

.emotion-4::-webkit-input-placeholder {
  color: #9fa6c7;
}

.emotion-4::-moz-placeholder {
  color: #9fa6c7;
}

.emotion-4:-ms-input-placeholder {
  color: #9fa6c7;
}

.emotion-4::placeholder {
  color: #9fa6c7;
}

<div>
  <div
    class="emotion-1"
  >
    <input
      class="emotion-0"
    />
  </div>
  <div
    class="emotion-1"
  >
    <input
      class="emotion-2"
    />
  </div>
  <div
    class="emotion-1"
  >
    <input
      class="emotion-4"
    />
  </div>
  <div
    class="emotion-1"
  >
    <input
      class="emotion-6"
    />
  </div>
</div>
`;
